rebrand-polish: 132239 fix pricing page 'get started' text misalignment

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -2059,6 +2059,7 @@ a:hover {
 		}
 
 		.zero-dollars {
+			position: relative;
 			font-size: 9.1875em;
 			line-height: 0.8em;
 			display: inline-block;
@@ -2071,8 +2072,10 @@ a:hover {
 
 		.free-3-users-text {
 			position: absolute;
-			top: 75px;
-			left: 275px;
+			font-size: 16px;
+			line-height: 1.2em;
+			top: 50px;
+			left: 175px;
 		}
 	}
 }
